[gd_scene load_steps=5 format=3 uid="uid://7m5ksesggrhi"]

[ext_resource type="Shader" uid="uid://bsf1a25jxwlv1" path="res://common/shaders/blur_and_tint.gdshader" id="1_h6jc8"]
[ext_resource type="Theme" uid="uid://ck2b320oc408w" path="res://ui/menus/game_menu.tres" id="1_xutny"]
[ext_resource type="Script" uid="uid://cl6q21gw81ng8" path="res://ui/menus/settings_menu.gd" id="2_a6yft"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xutny"]
shader = ExtResource("1_h6jc8")
shader_parameter/blur_amount = 0.400000019
shader_parameter/tint = Color(0.19076231, 0.19076234, 0.19076231, 1)
shader_parameter/tint_strength = 0.2000000095
shader_parameter/saturation = 1.0

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xutny")
script = ExtResource("2_a6yft")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_xutny")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -467.75
offset_top = -284.5
offset_right = 467.75
offset_bottom = 284.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 80
text = "Settings"
horizontal_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Labels" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="MainLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer4/Labels"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
text = "Game volume"

[node name="MusicLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer4/Labels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Music volume"

[node name="Effectlabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer4/Labels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Effects volume"

[node name="Sliders" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="GameSlider" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer4/Sliders"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.01

[node name="MusicSlider" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer4/Sliders"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.01

[node name="EffectSlider" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer4/Sliders"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.01

[node name="BackButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"
